comunicacao com rabbitmq autenticada
